[package]
name = "adrenaline"
version = "0.1.0"
authors = ["Yuvraj Makkena <yuvraj@riseup.net>"]
edition = "2018"

[[test]]
name = "stack_overflow"
harness = false

[package.metadata.bootimage]
test-args = ["-device", "isa-debug-exit,iobase=0xf4,iosize=0x04", "-serial", "stdio"]
test-success-exit-code = 33         # (0x10 << 1) | 1
test-timeout = 300

[dependencies]
bootloader = "0.8.0"
volatile = "0.2.6"
spin = "0.5.2"
x86_64 = "0.9.6"
uart_16550 = "0.2.0"
pic8259_simple = "0.1.1"
pc-keyboard = "0.5.0"

[dependencies.lazy_static]
version = "1.0"
features = ["spin_no_std"]

